Fixed missing documentation
